--- a/settings/mods.settings
+++ b/settings/mods.settings
@@ -2,14 +2,38 @@
 Enabled=1
 Priority=0
 
-[mod0000_XMLTweaks]
-Enabled=1
-Priority=0
-
 [mod0000_MergedPack]
 Enabled=1
 Priority=1
 
+[modmorelight_Phoenix]
+Enabled=1
+Priority=5
+
+[modNoDirtyLensEffect]
+Enabled=1
+Priority=5
+
 [modW3EE]
 Enabled=1
 Priority=10
+
+[mod_W2TrissLore-Friendly]
+Enabled=1
+Priority=20
+
+[mod_tw2triss]
+Enabled=1
+Priority=21
+
+[modNitpickerOldArmors]
+Enabled=1
+Priority=100
+
+[modWLM_PhoenixIII]
+Enabled=1
+Priority=100
+
+[modHDReworkedProject]
+Enabled=1
+Priority=101
