* updated input and user settings * added custom reshade

--- a/settings/input.settings
+++ b/settings/input.settings
@@ -140,20 +140,20 @@ IK_F6=(Action=DrinkPotion1)
 IK_F7=(Action=DrinkPotion2)
 IK_T=(Action=DrinkPotion3)
 IK_Y=(Action=DrinkPotion4)
-IK_F9=(Action=SilverSword)
-IK_F9=(Action=SwordSheatheSilver,State=Duration,IdleTime=0.3)
-IK_F8=(Action=SteelSword)
-IK_F8=(Action=SwordSheatheSteel,State=Duration,IdleTime=0.3)
+IK_RightBracket=(Action=SilverSword)
+IK_RightBracket=(Action=SwordSheatheSilver,State=Duration,IdleTime=0.3)
+IK_LeftBracket=(Action=SteelSword)
+IK_LeftBracket=(Action=SwordSheatheSteel,State=Duration,IdleTime=0.3)
 
 [BASE_DRAW_SWORDS_KEYBOARD]
 IK_F6=(Action=DrinkPotion1)
 IK_F7=(Action=DrinkPotion2)
 IK_T=(Action=DrinkPotion3)
 IK_Y=(Action=DrinkPotion4)
-IK_F9=(Action=SwordSheatheSilver,State=Duration,IdleTime=0.3)
-IK_F9=(Action=SilverSword)
-IK_F8=(Action=SwordSheatheSteel,State=Duration,IdleTime=0.3)
-IK_F8=(Action=SteelSword)
+IK_RightBracket=(Action=SwordSheatheSilver,State=Duration,IdleTime=0.3)
+IK_RightBracket=(Action=SilverSword)
+IK_LeftBracket=(Action=SwordSheatheSteel,State=Duration,IdleTime=0.3)
+IK_LeftBracket=(Action=SteelSword)
 
 [BASE_DRINK_POTIONS]
 IK_F6=(Action=DrinkPotion1)
@@ -348,7 +348,7 @@ IK_N=(Action=PanelMeditation)
 IK_O=(Action=PanelCrafting)
 IK_B=(Action=PanelBestiary)
 IK_Enter=(Action=HubMenu)
-IK_Semicolon=(Action=PanelBooks)
+IK_LeftBracket=(Action=PanelBooks)
 
 [BASE_SHOW_RADIAL_MENU]
 IK_Tab=(Action=RadialMenu)
@@ -427,10 +427,10 @@ IK_F1=(Action=OnShowControlsHelp)
 IK_F2=(Action=QuestMarkersToggle)
 IK_F3=(Action=UserMarkersToggle)
 IK_F11=(Action=PauseGameToggle)
-IK_Comma=(Action=SwitchCrossbow)
+IK_RightBracket=(Action=SwitchCrossbow)
 IK_RShift=(Action=PinModuleModfier)
 IK_Enter=(Action=HubMenu)
-IK_Semicolon=(Action=PanelBooks)
+IK_LeftBracket=(Action=PanelBooks)
 
 [BoatPassenger]
 IK_Escape=(Action=IngameMenu)
@@ -473,10 +473,10 @@ IK_F1=(Action=OnShowControlsHelp)
 IK_F2=(Action=QuestMarkersToggle)
 IK_F3=(Action=UserMarkersToggle)
 IK_F11=(Action=PauseGameToggle)
-IK_Comma=(Action=SwitchCrossbow)
+IK_RightBracket=(Action=SwitchCrossbow)
 IK_RShift=(Action=PinModuleModfier)
 IK_Enter=(Action=HubMenu)
-IK_Semicolon=(Action=PanelBooks)
+IK_LeftBracket=(Action=PanelBooks)
 
 [Combat]
 IK_Pad_A_CROSS=(Action=Sprint)
@@ -569,10 +569,10 @@ IK_Pad_LeftAxisY=(Action=GI_AxisLeftY)
 IK_V=(Action=Dodge)
 IK_Pad_X_SQUARE=(Action=Finisher)
 IK_Pad_X_SQUARE=(Action=Finish)
-IK_F9=(Action=SilverSword)
-IK_F9=(Action=SwordSheatheSilver,State=Duration,IdleTime=0.3)
-IK_F8=(Action=SteelSword)
-IK_F8=(Action=SwordSheatheSteel,State=Duration,IdleTime=0.3)
+IK_RightBracket=(Action=SilverSword)
+IK_RightBracket=(Action=SwordSheatheSilver,State=Duration,IdleTime=0.3)
+IK_LeftBracket=(Action=SteelSword)
+IK_LeftBracket=(Action=SwordSheatheSteel,State=Duration,IdleTime=0.3)
 IK_Pad_DigitRight=(Action=ComboDigitRight)
 IK_Pad_DigitLeft=(Action=ComboDigitLeft)
 IK_1=(Action=SelectAard)
@@ -628,11 +628,11 @@ IK_F1=(Action=OnShowControlsHelp)
 IK_F2=(Action=QuestMarkersToggle)
 IK_F3=(Action=UserMarkersToggle)
 IK_F11=(Action=PauseGameToggle)
-IK_Comma=(Action=SwitchCrossbow)
+IK_RightBracket=(Action=SwitchCrossbow)
 IK_RShift=(Action=PinModuleModfier)
 IK_Enter=(Action=HubMenu)
 IK_Enter=(Action=HubMenu)
-IK_Semicolon=(Action=PanelBooks)
+IK_LeftBracket=(Action=PanelBooks)
 
 [Combat_Replacer_Ciri]
 IK_Pad_A_CROSS=(Action=Sprint)
@@ -759,7 +759,7 @@ IK_F3=(Action=UserMarkersToggle)
 IK_F11=(Action=PauseGameToggle)
 IK_RShift=(Action=PinModuleModfier)
 IK_Enter=(Action=HubMenu)
-IK_Semicolon=(Action=PanelBooks)
+IK_LeftBracket=(Action=PanelBooks)
 
 [Death]
 
@@ -894,7 +894,7 @@ IK_F2=(Action=QuestMarkersToggle)
 IK_F3=(Action=UserMarkersToggle)
 IK_F11=(Action=PauseGameToggle)
 IK_RShift=(Action=PinModuleModfier)
-IK_Semicolon=(Action=PanelBooks)
+IK_LeftBracket=(Action=PanelBooks)
 
 [EMPTY_CONTEXT]
 IK_N=(Action=NoTimeForGwent)
@@ -1031,10 +1031,10 @@ IK_Pad_RightThumb=(Action=HighlightObjective)
 IK_Pad_LeftTrigger=(Action=Focus,Reprocess)
 IK_Pad_X_SQUARE=(Action=Finisher)
 IK_Pad_X_SQUARE=(Action=Finish)
-IK_F9=(Action=SilverSword)
-IK_F9=(Action=SwordSheatheSilver,State=Duration,IdleTime=0.3)
-IK_F8=(Action=SteelSword)
-IK_F8=(Action=SwordSheatheSteel,State=Duration,IdleTime=0.3)
+IK_RightBracket=(Action=SilverSword)
+IK_RightBracket=(Action=SwordSheatheSilver,State=Duration,IdleTime=0.3)
+IK_LeftBracket=(Action=SteelSword)
+IK_LeftBracket=(Action=SwordSheatheSteel,State=Duration,IdleTime=0.3)
 IK_Pad_Start=(Action=ShowEntryInPanel)
 IK_Home=(Action=ToggleHud)
 IK_Escape=(Action=ShowEntryInPanel)
@@ -1048,10 +1048,10 @@ IK_F2=(Action=QuestMarkersToggle)
 IK_F3=(Action=UserMarkersToggle)
 IK_F4=(Action=RefillPotionsToggle)
 IK_F11=(Action=PauseGameToggle)
-IK_Comma=(Action=SwitchCrossbow)
+IK_RightBracket=(Action=SwitchCrossbow)
 IK_RShift=(Action=PinModuleModfier)
 IK_Enter=(Action=HubMenu)
-IK_Semicolon=(Action=PanelBooks)
+IK_LeftBracket=(Action=PanelBooks)
 
 [Exploration_Replacer_Ciri]
 IK_Pad_A_CROSS=(Action=Sprint)
@@ -1145,10 +1145,10 @@ IK_Pad_B_CIRCLE=(Action=ExplorationInteraction)
 IK_Pad_B_CIRCLE=(Action=Jump)
 IK_Pad_B_CIRCLE=(Action=DebugInput)
 IK_B=(Action=PanelBestiary)
-IK_F9=(Action=CiriDrawWeaponAlternative)
-IK_F9=(Action=CiriHolsterWeapon,State=Duration,IdleTime=0.3)
-IK_F8=(Action=CiriDrawWeapon)
-IK_F8=(Action=CiriHolsterWeapon,State=Duration,IdleTime=0.3)
+IK_RightBracket=(Action=CiriDrawWeaponAlternative)
+IK_RightBracket=(Action=CiriHolsterWeapon,State=Duration,IdleTime=0.3)
+IK_LeftBracket=(Action=CiriDrawWeapon)
+IK_LeftBracket=(Action=CiriHolsterWeapon,State=Duration,IdleTime=0.3)
 IK_Pad_RightThumb=(Action=TrackQuest)
 IK_Pad_RightThumb=(Action=HighlightObjective)
 IK_Pad_Back_Select=(Action=GotoGlossary,State=Duration,IdleTime=1.2)
@@ -1183,7 +1183,7 @@ IK_F3=(Action=UserMarkersToggle)
 IK_F11=(Action=PauseGameToggle)
 IK_RShift=(Action=PinModuleModfier)
 IK_Enter=(Action=HubMenu)
-IK_Semicolon=(Action=PanelBooks)
+IK_LeftBracket=(Action=PanelBooks)
 
 [FakeAxisInput]
 
@@ -1209,8 +1209,8 @@ IK_Pad_A_CROSS=(Action=Gallop,State=Duration,IdleTime=0.3)
 IK_Pad_A_CROSS=(Action=Follow)
 IK_Pad_LeftAxisX=(Action=GI_AxisLeftX)
 IK_Pad_LeftAxisY=(Action=GI_AxisLeftY)
-IK_F9=(Action=SwordSheatheSilver,State=Duration,IdleTime=0.3)
-IK_F9=(Action=SilverSword)
+IK_RightBracket=(Action=SwordSheatheSilver,State=Duration,IdleTime=0.3)
+IK_RightBracket=(Action=SilverSword)
 IK_Pad_Y_TRIANGLE=(Action=VehicleAttack)
 IK_Pad_B_CIRCLE=(Action=HorseJump)
 IK_Pad_B_CIRCLE=(Action=HorseDismount,State=Duration,IdleTime=10000)
@@ -1218,8 +1218,8 @@ IK_Pad_B_CIRCLE=(Action=VehicleItemActionAbort)
 IK_Pad_B_CIRCLE=(Action=DebugInput)
 IK_Pad_LeftTrigger=(Action=Focus,Reprocess)
 IK_B=(Action=PanelBestiary)
-IK_F8=(Action=SwordSheatheSteel,State=Duration,IdleTime=0.3)
-IK_F8=(Action=SteelSword)
+IK_LeftBracket=(Action=SwordSheatheSteel,State=Duration,IdleTime=0.3)
+IK_LeftBracket=(Action=SteelSword)
 IK_Pad_RightThumb=(Action=CameraLock)
 IK_Pad_RightThumb=(Action=TrackQuest)
 IK_Pad_RightThumb=(Action=HighlightObjective)
@@ -1253,10 +1253,10 @@ IK_F1=(Action=OnShowControlsHelp)
 IK_F2=(Action=QuestMarkersToggle)
 IK_F3=(Action=UserMarkersToggle)
 IK_F11=(Action=PauseGameToggle)
-IK_Comma=(Action=SwitchCrossbow)
+IK_RightBracket=(Action=SwitchCrossbow)
 IK_RShift=(Action=PinModuleModfier)
 IK_Enter=(Action=HubMenu)
-IK_Semicolon=(Action=PanelBooks)
+IK_LeftBracket=(Action=PanelBooks)
 
 [Horse_Replacer_Ciri]
 IK_Escape=(Action=IngameMenu)
@@ -1272,7 +1272,7 @@ IK_P=(Action=VehicleAttack)
 IK_Pad_B_CIRCLE=(Action=HorseJump)
 IK_Pad_B_CIRCLE=(Action=DebugInput)
 IK_B=(Action=PanelBestiary)
-IK_F8=(Action=CiriDrawWeapon)
+IK_LeftBracket=(Action=CiriDrawWeapon)
 IK_Pad_RightThumb=(Action=CameraLock)
 IK_Pad_RightThumb=(Action=TrackQuest)
 IK_Pad_RightThumb=(Action=HighlightObjective)
@@ -1292,10 +1292,10 @@ IK_O=(Action=PanelCrafting)
 IK_None=(Action=TrackQuest)
 IK_None=(Action=HighlightObjective)
 IK_X=(Action=Stop)
-IK_F8=(Action=CiriDrawWeapon)
-IK_F9=(Action=CiriDrawWeaponAlternative)
-IK_F9=(Action=CiriHolsterWeapon,State=Duration,IdleTime=0.3)
-IK_F8=(Action=CiriHolsterWeapon,State=Duration,IdleTime=0.3)
+IK_LeftBracket=(Action=CiriDrawWeapon)
+IK_RightBracket=(Action=CiriDrawWeaponAlternative)
+IK_RightBracket=(Action=CiriHolsterWeapon,State=Duration,IdleTime=0.3)
+IK_LeftBracket=(Action=CiriHolsterWeapon,State=Duration,IdleTime=0.3)
 IK_LControl=(Action=ToggleRoadFollow)
 IK_Pad_Start=(Action=ShowEntryInPanel)
 IK_Home=(Action=ToggleHud)
@@ -1311,7 +1311,7 @@ IK_F3=(Action=UserMarkersToggle)
 IK_F11=(Action=PauseGameToggle)
 IK_RShift=(Action=PinModuleModfier)
 IK_Enter=(Action=HubMenu)
-IK_Semicolon=(Action=PanelBooks)
+IK_LeftBracket=(Action=PanelBooks)
 
 [InputSettings]
 Version=43
@@ -1325,8 +1325,8 @@ IK_F7=(Action=DrinkPotion2)
 IK_T=(Action=DrinkPotion3)
 IK_Y=(Action=DrinkPotion4)
 IK_Pad_LeftAxisX=(Action=GI_AxisLeftX)
-IK_F8=(Action=SwordSheatheSteel,State=Duration,IdleTime=0.3)
-IK_F8=(Action=SteelSword)
+IK_LeftBracket=(Action=SwordSheatheSteel,State=Duration,IdleTime=0.3)
+IK_LeftBracket=(Action=SteelSword)
 IK_Pad_LeftAxisY=(Action=GI_AxisLeftY)
 IK_Pad_RightThumb=(Action=TrackQuest)
 IK_Pad_RightThumb=(Action=HighlightObjective)
@@ -1340,8 +1340,8 @@ IK_Pad_RightAxisY=(Action=GI_AxisRightY)
 IK_None=(Action=TrackQuest)
 IK_None=(Action=HighlightObjective)
 IK_Pad_Back_Select=(Action=GotoGlossary,State=Duration,IdleTime=1.2)
-IK_F9=(Action=SwordSheatheSilver,State=Duration,IdleTime=0.3)
-IK_F9=(Action=SilverSword)
+IK_RightBracket=(Action=SwordSheatheSilver,State=Duration,IdleTime=0.3)
+IK_RightBracket=(Action=SilverSword)
 IK_Pad_X_SQUARE=(Action=DiveDown)
 IK_Pad_Start=(Action=ShowEntryInPanel)
 IK_Home=(Action=ToggleHud)
@@ -1437,7 +1437,7 @@ IK_Pad_Back_Select=(Action=GotoGlossary,State=Duration,IdleTime=1.2)
 IK_Home=(Action=ToggleHud)
 IK_Escape=(Action=ShowEntryInPanel)
 IK_Enter=(Action=HubMenu)
-IK_Semicolon=(Action=PanelBooks)
+IK_LeftBracket=(Action=PanelBooks)
 
 [Swimming]
 IK_Pad_A_CROSS=(Action=Sprint)
@@ -1570,7 +1570,7 @@ IK_F3=(Action=UserMarkersToggle)
 IK_F11=(Action=PauseGameToggle)
 IK_RShift=(Action=PinModuleModfier)
 IK_Enter=(Action=HubMenu)
-IK_Semicolon=(Action=PanelBooks)
+IK_LeftBracket=(Action=PanelBooks)
 
 [ThrowHold]
 IK_F6=(Action=DrinkPotion1)
@@ -1584,13 +1584,13 @@ IK_Pad_RightShoulder=(Action=ThrowItemHold,State=Duration,IdleTime=0.2)
 IK_Pad_RightShoulder=(Action=ThrowItem)
 IK_Pad_B_CIRCLE=(Action=DebugInput)
 IK_Pad_B_CIRCLE=(Action=ThrowCastAbort)
-IK_F9=(Action=SwordSheatheSilver,State=Duration,IdleTime=0.3)
-IK_F9=(Action=SilverSword)
+IK_RightBracket=(Action=SwordSheatheSilver,State=Duration,IdleTime=0.3)
+IK_RightBracket=(Action=SilverSword)
 IK_O=(Action=PanelFakeHud)
 IK_Pad_LeftAxisX=(Action=GI_AxisLeftX)
 IK_Pad_LeftAxisX=(Action=GI_AxisLeftX)
-IK_F8=(Action=SwordSheatheSteel,State=Duration,IdleTime=0.3)
-IK_F8=(Action=SteelSword)
+IK_LeftBracket=(Action=SwordSheatheSteel,State=Duration,IdleTime=0.3)
+IK_LeftBracket=(Action=SteelSword)
 IK_Pad_LeftAxisY=(Action=GI_AxisLeftY)
 IK_Pad_LeftAxisY=(Action=GI_AxisLeftY)
 IK_Pad_B_CIRCLE=(Action=DebugInput)
@@ -1599,7 +1599,7 @@ IK_NumPad1=(Action=Debug_KillAllEnemies)
 IK_NumPad2=(Action=Debug_KillTarget)
 IK_NumPad4=(Action=Debug_TeleportToPin)
 IK_F11=(Action=PauseGameToggle)
-IK_Comma=(Action=SwitchCrossbow)
+IK_RightBracket=(Action=SwitchCrossbow)
 
 [TutorialPopup]
 
