--- a/settings/user.settings
+++ b/settings/user.settings
@@ -27,22 +27,54 @@ EnAgg=5
 EDDN=15
 EDND=1
 [Hidden]
+SvscabEnabled=true
+SvswEnabled=true
+GlovesEnabled=true
+ShouldersGearEnabled=false
+BeardRefreshEnabled=false
+HideStscab=true
+ArmsEnabled=false
 HasSeenGotyWelcomeMessage=true
+Accessories2GearEnabled=false
 HasSetup=true
+Accessories4GearEnabled=false
+Accessories1GearEnabled=false
+FaceGearEnabled=false
+ChestEnabled=true
+LegsEnabled=true
+StSwordEnabled=false
+AltHairEnabled=false
+Accessories5GearEnabled=false
+BanditMaskEnabled=false
+HideSvscab=true
+CLegsEnabled=false
+BootsEnabled=true
+AutohideEnabled=false
+StscabEnabled=true
+CrossbowEnabled=true
+CapeEnabled=false
+StswEnabled=true
 WorldMapPreviewMode=1
+BodyEnabled=false
+CChestEnabled=true
+HairEnabled=true
+SvSwordEnabled=false
 uiVerticalFrameScale=1
 uiHorizontalFrameScale=1
+HeadGearEnabled=false
+Accessories3GearEnabled=true
+HeadEnabled=true
 [AMMSvSwords]
 SvscabSelection=6
-SvscabEnabled=true
-HideSvscab=true
+SvscabEnabled=false
+HideSvscab=false
 SvSwordSelection=49
 SvSwordEnabled=false
 [SCOptionPrepMed]
 PrepTalents=false
 PrepHTimb=1
 PrepTimb=2
-PrepCamLock=true
+PrepCamLock=false
 PrepUpgrade=false
 PrepMenu=1
 PrepLVL=false
@@ -62,14 +94,14 @@ OutputMonitor=0
 iSecondsPerMinute=15
 bMilitaryTime=false
 [AMMSets]
-GlovesEnabled=true
+GlovesEnabled=false
 LegsSelection=10
-ChestEnabled=true
-LegsEnabled=true
+ChestEnabled=false
+LegsEnabled=false
 BootsSelection=9
 GlovesSelection=11
 ChestSelection=16
-BootsEnabled=true
+BootsEnabled=false
 [SCOptionCR]
 RSAF=0
 RSAGD=0
@@ -80,7 +112,7 @@ RSAGF=30
 [AMMHead]
 HairSelection=2
 FaceGearSelection=0
-BeardRefreshEnabled=false
+BeardRefreshEnabled=true
 FaceGearEnabled=false
 AltHairEnabled=false
 BanditMaskEnabled=false
@@ -105,6 +137,7 @@ HorsePanicBarModule=false
 ConsoleModule=false
 MiminapPoiQuestionMarks=false
 WolfMedalion=false
+EnemyFocusModule=false
 EnemyHitEffects=false
 HorseStaminaBarModule=false
 MinimapTracksWaypoints=false
@@ -279,19 +312,24 @@ fhudDoNotShowDamage=true
 [AMMAcc]
 Accessories1GearSelection=11
 Accessories4GearSelection=21
+Accessories6GearEnabled=false
 Accessories2GearEnabled=false
+Accessories8GearEnabled=false
 Accessories5GearSelection=20
 Accessories4GearEnabled=false
 Accessories1GearEnabled=false
 Accessories3GearSelection=28
+Accessories9GearEnabled=false
 Accessories5GearEnabled=false
 Accessories2GearSelection=29
-Accessories3GearEnabled=true
+Accessories10GearEnabled=false
+Accessories7GearEnabled=false
+Accessories3GearEnabled=false
 [Scripts]
 DebugScriptsForceFlush=true
 DebugScriptsLogDir=
 [PostProcess]
-SharpenAmount=1
+SharpenAmount=0
 MotionBlurPositionTreshold=0.05
 MotionBlurRotationTreshold=1
 SSAOSolution=2
@@ -382,8 +420,6 @@ BlockHits8=0
 BlockHits2=100
 BlockHits9=0
 BlockHits3=0
-[SFXPresetsHidden]
-Location=1
 [Global]
 scale=1.000000
 opacity=1.000000
@@ -496,7 +532,7 @@ DynamicDecalsHideDistance=20
 StripeHideDistance=60
 [MFDMenuFog]
 EnableFog=false
-fogDensity=0
+fogDensity=1
 [SCOptionCP]
 StamDur=5
 KHT=60
@@ -552,10 +588,10 @@ fhudMainMenuMode=0
 [MFDMenuDOF]
 dofFarBlurDist=40
 dofActivatedSkyRange=false
-dofBlend=0.75
+dofBlend=0.5
 dofFarFocusDist=20
 dofActivatedSkyTreshold=false
-EnableDoF=true
+EnableDoF=false
 dofSkyRange=0
 dofNearBlurDist=0
 dofNearFocusDist=20
@@ -566,10 +602,10 @@ NoninteractiveSpinnerTime=3
 FadeOutSpinnerTime=1
 NoninteractiveEndCooldown=1
 [AMMStSwords]
-HideStscab=true
+HideStscab=false
 StSwordEnabled=false
 StscabSelection=2
-StscabEnabled=true
+StscabEnabled=false
 StSwordSelection=17
 [AMMCape]
 ShouldersGearEnabled=false
@@ -671,7 +707,7 @@ HeadGearToggle=true
 AutohideEnabled=false
 CrossbowEnabled=true
 StswEnabled=true
-BodyEnabled=false
+BodyEnabled=true
 HeadEnabled=true
 CapeToggle=true
 [SCOptionH]
@@ -919,7 +955,9 @@ flyingMonsterHunts=8
 [AMMCSets]
 CLegsSelection=1
 CLegsEnabled=false
-CChestEnabled=true
+CBootsEnabled=false
+CChestEnabled=false
+CGlovesEnabled=false
 [AMMRoachAcc]
 Acc1Selection=0
 Acc1Enabled=false
@@ -1061,6 +1099,8 @@ HorseEnabled=true
 HairsEnabled=false
 [Foliage]
 MaxVisibilityDepth=24
+[AMMWH]
+FullBodyEnabled=false
 [fhudInventory]
 fhudShowTrueItemPrice=true
 fhudResetNewItemsEdibles=true
