* updated recommended mods * updated settings

--- a/settings/user.settings
+++ b/settings/user.settings
@@ -27,15 +27,17 @@ EnAgg=5
 EDDN=15
 EDND=1
 [Hidden]
-SvscabEnabled=true
+SvscabEnabled=false
 SvswEnabled=true
 GlovesEnabled=true
 ShouldersGearEnabled=false
-BeardRefreshEnabled=false
-HideStscab=true
+BeardRefreshEnabled=true
+HideStscab=false
+Accessories6GearEnabled=false
 ArmsEnabled=false
 HasSeenGotyWelcomeMessage=true
 Accessories2GearEnabled=false
+Accessories8GearEnabled=false
 HasSetup=true
 Accessories4GearEnabled=false
 Accessories1GearEnabled=false
@@ -44,25 +46,31 @@ ChestEnabled=true
 LegsEnabled=true
 StSwordEnabled=false
 AltHairEnabled=false
+Accessories9GearEnabled=false
 Accessories5GearEnabled=false
 BanditMaskEnabled=false
-HideSvscab=true
+HideSvscab=false
 CLegsEnabled=false
 BootsEnabled=true
 AutohideEnabled=false
-StscabEnabled=true
+CBootsEnabled=false
+StscabEnabled=false
 CrossbowEnabled=true
+FullBodyEnabled=false
 CapeEnabled=false
 StswEnabled=true
 WorldMapPreviewMode=1
 BodyEnabled=false
-CChestEnabled=true
+Accessories10GearEnabled=false
+Accessories7GearEnabled=false
+CChestEnabled=false
+CGlovesEnabled=false
 HairEnabled=true
 SvSwordEnabled=false
 uiVerticalFrameScale=1
 uiHorizontalFrameScale=1
 HeadGearEnabled=false
-Accessories3GearEnabled=true
+Accessories3GearEnabled=false
 HeadEnabled=true
 [AMMSvSwords]
 SvscabSelection=6
@@ -94,14 +102,14 @@ OutputMonitor=0
 iSecondsPerMinute=15
 bMilitaryTime=false
 [AMMSets]
-GlovesEnabled=false
+GlovesEnabled=true
 LegsSelection=10
-ChestEnabled=false
-LegsEnabled=false
+ChestEnabled=true
+LegsEnabled=true
 BootsSelection=9
 GlovesSelection=11
 ChestSelection=16
-BootsEnabled=false
+BootsEnabled=true
 [SCOptionCR]
 RSAF=0
 RSAGD=0
@@ -207,13 +215,6 @@ accelerated_degeneration_rate=1.75
 [ContentManager/Mods]
 MaxNameLength=64
 Enabled=true
-[RandomEncountersMENU]
-enableTrophies=0
-cityBruxa=0
-Difficulty=1
-dayFrequency=2
-nightFrequency=3
-citySpawn=0
 [SCOptionPrepAlch]
 alchemy_anywhere=0
 potion_duration_multiplier=1
@@ -239,14 +240,14 @@ InjPImm=false
 [ImmersiveCamPositionsSprint]
 sprintMode=1
 [SCOptionVisuals]
-SignIgniInt=0
-BloodSprayMaj=0
-BloodOnlyCrit=0
-BloodSpray=1
-BloodActiveRange=1
-BloodTrail=0
-BloodActive=1
-SignAardInt=0
+SignIgniInt=false
+BloodSprayMaj=false
+BloodOnlyCrit=false
+BloodSpray=true
+BloodActiveRange=true
+BloodTrail=false
+BloodActive=true
+SignAardInt=false
 [SCOptionD]
 SpecterDam=1
 PDamB=1
@@ -331,16 +332,14 @@ DebugScriptsLogDir=
 [PostProcess]
 SharpenAmount=0
 MotionBlurPositionTreshold=0.05
+AllowVignette=false
 MotionBlurRotationTreshold=1
 SSAOSolution=2
 [LFEmisc]
 LFEcraftPrice=1
 LFEdialog=0.3
-LFEversion=2.23
 LFErepair=1.0
-LFEgold=1.0
 LFEdiss=1.0
-LFEinit=true
 LFEremup=1.0
 [Input]
 PadVibrationEnabled=true
@@ -351,9 +350,9 @@ CameraAutoRotX=true
 InvertCameraX=false
 UIMouseSensitivity=1
 CameraAutoRotY=true
-RightStickCameraSensitivity=1.2449
+RightStickCameraSensitivity=1.29592
 InvertCameraY=false
-RightStickAimSensitivity=1.09184
+RightStickAimSensitivity=1.29592
 MouseSensitivity=1
 SteamController=0
 ForceDisablePad=false
@@ -368,11 +367,6 @@ fhudHideMonsterNames=true
 fhudDisableAllInteractionPrompts=false
 fhudHideHerbNames=false
 fhudMaxDistanceToShowNames=3
-[IDD_General]
-enableMod=true
-enableUltra=true
-overallDrawDist=5
-overallLodDist=5
 [DLC]
 DlcEnabled_ammhorsedlc=1
 DlcEnabled_ammdlc=1
@@ -382,31 +376,21 @@ DlcEnabled_dlc_realweather=1
 DlcEnabled_dlc_005_001=1
 DlcEnabled_dlc_007_001=1
 DlcEnabled_dlc_013_001=1
-DlcEnabled_dlc_004_001=0
 DlcEnabled_dlc_dlcgrass=1
-DlcEnabled_dlc_006_001=0
 DlcEnabled_dlc_001_001=1
-DlcEnabled_dlc_008_001=1
-DlcEnabled_dlc_011_001=1
+DlcEnabled_dlc_008_001=0
 DlcEnabled_dlc_002_001=1
-DlcEnabled_dlc_scabbards=1
 DlcEnabled_dlc_animation_bottles=1
 DlcEnabled_ep1=1
 DlcEnabled_dlc_014_001=1
-DlcEnabled_dlc_mfdt=1
 DlcEnabled_dlc_009_001=1
 DlcEnabled_bob_000_000=1
 DlcEnabled_abob_001_001=1
-DlcEnabled_dlcice=1
 DlcEnabled_w3ee_dlc=1
 DlcEnabled_dlc_bootstrap=1
 DlcEnabled_full_metal_witcher=1
-DlcEnabled_dlcquen=1
-DlcEnabled_ccaw=1
 DlcEnabled_dlc_012_001=1
 DlcEnabled_dlc_003_001=1
-DlcEnabled_dlc_016_001=1
-DlcEnabled_dlc_011_002=0
 [SCOptionCE7]
 BlockHits4=40
 BlockHits5=100
@@ -435,15 +419,10 @@ ETCameraWeight=0.5
 CAdblootstartsp=1.0
 CAdrinksp=1.0
 CAlootstartsp=1.0
-CAworkbenchsp=1.2
+CAworkbenchsp=1.0
 CAgrindstonesp=1.0
 CAeatsp=1.0
 CAoilsp=1.0
-[IDD_Deco]
-LodMult=5
-DrawMult=5
-OverrideDraw=false
-OverrideLod=false
 [SCOptionEx]
 SStamUsage=0
 SStamIndoor=false
@@ -464,20 +443,14 @@ ReinsSelection=1
 MotionSicknessFocusMode=true
 DisableAutomaticSwordSheathe=true
 Difficulty=4
-AutosaveTimeInterval=15
 HudTutorialEnabled=false
 EnableUberMovement=1
 AutoCameraCenter=false
 [SCOptionCW]
 RDSCB=0.5
-ASAPF=0.01
 ASDPH=10
 ASHAN=1
-LightIn=0.01
-ASAPH=0.02
-ASFA=0.02
 FASC=6
-HeavyDe=0.02
 RDSCD=0.9
 ASDPS=10
 SASC=9
@@ -488,9 +461,7 @@ ASC=0
 RDSC=0.8
 ASSD=1
 BLSC=5
-ASHA=0.03
 RDSCC=0.8
-ASDR=0.04
 ASFAN=1
 COSC=8
 EVSC=6
@@ -515,7 +486,6 @@ tempXBuffsRM=0
 tempYBuffs=23
 tempXBuffs=1
 [SCOptionInv]
-None=1
 WMoney=true
 CInvent=false
 WMisc=true
@@ -530,43 +500,21 @@ DecalsHideDistance=80
 DimmerHideDistance=60
 DynamicDecalsHideDistance=20
 StripeHideDistance=60
-[MFDMenuFog]
-EnableFog=false
-fogDensity=1
 [SCOptionCP]
-StamDur=5
-KHT=60
-KST=75
-BleedDam=35
 CTM=0
-PCheckS=0
-StamDam=10
-CCheck=1
 CTHH=1
-CCheckA=0
 CTHSH=1
-CTH=0
+CTH=1
 CTMH=0
-BleedDur=3
-PCheckA=1
-CADRGA=1
-KAT=1
-DisarmSH=1
-PCheck=0
-[IDD_Veg]
-LodMult=5
-DrawMult=5
-OverrideDraw=false
-OverrideLod=false
 [General]
 ConfigVersion=2
 [CAanim]
 CAeat=0
-CAworkbench=0
-CAgrindstone=0
+CAworkbench=1
+CAgrindstone=1
 CAdrink=0
-CAloot=0
-CAoil=1.0
+CAloot=1
+CAoil=true
 [SCOptionCE4]
 BlockHits4=40
 BlockHits5=90
@@ -585,16 +533,6 @@ Disabled=false
 [fhudMainMenu]
 fhudHideDLC=true
 fhudMainMenuMode=0
-[MFDMenuDOF]
-dofFarBlurDist=40
-dofActivatedSkyRange=false
-dofBlend=0.5
-dofFarFocusDist=20
-dofActivatedSkyTreshold=false
-EnableDoF=false
-dofSkyRange=0
-dofNearBlurDist=0
-dofNearFocusDist=20
 [LoadingOverlay/TCR]
 FadeOutCooldownExtraTime=1
 FadeInSpinnerTime=1
@@ -673,7 +611,7 @@ tempXEnemy=200
 [HorseWhistling]
 IHW_SignPosts=true
 IHW_Camps=true
-IHW_Geralt=3
+IHW_Geralt=5
 IHW_Active=true
 [SCOptionCE5]
 BlockHits4=25
@@ -707,7 +645,7 @@ HeadGearToggle=true
 AutohideEnabled=false
 CrossbowEnabled=true
 StswEnabled=true
-BodyEnabled=true
+BodyEnabled=false
 HeadEnabled=true
 CapeToggle=true
 [SCOptionH]
@@ -737,12 +675,6 @@ tempYDamagedItems=340
 scaleItemInfo=0.85
 scaleDamagedItems=0.75
 tempYItemInfo=37
-[encounterChanceNight]
-enableGroupMonsters=3
-enableWildHunt=7
-enableHumanEnemies=2
-enableFlyingMonsters=4
-enableGroundMonsters=3
 [SCOptionCA]
 ADRGenD=2.5
 ADRDegHH=10
@@ -794,7 +726,6 @@ SkillRateGeneral=1.0
 SkillRateIgni=1.0
 SkillRateBombs=1.0
 SlotsUnlocked=false
-SkillRate=1.0
 SkillRateYrden=1.0
 SkillRateAxii=1.0
 SkillRateUtility=1.0
@@ -804,13 +735,11 @@ SkillRateQuen=1.0
 VersionNr=3.07
 PointReq=false
 SkillRateFast=1.0
-PrevVersion=true
 SkillRateMutagens=1.0
 SkillRateCrossbow=1.0
 SkillRateAard=1.0
 SkillRateStrong=1.0
 MutsUnlocked=false
-SkillActive=1
 SkillRateTrance=1.0
 SPG=1
 [ControlsandConsole]
@@ -904,10 +833,6 @@ fhudImmersive3DMarker=true
 fhudQuestMarkersEnabled=true
 fhudMarkersIconSizePrc=50
 fhudCompassMarkersTop=false
-[W3IM_General]
-bToggleHealthbarOff=true
-iWorkbenchCharges=45
-iGrindstoneCharges=30
 [Rendering/SpeedTree]
 GrassGenerationEfficiency=0.075
 GrassDistanceScale=2.4
@@ -948,10 +873,6 @@ ReDM=1.0
 tempYWolfHead=379
 scaleWolfHead=0.8
 tempXWolfHead=43
-[monsterHuntChance]
-groundMonsterHunts=3
-groupMonsterHunts=2
-flyingMonsterHunts=8
 [AMMCSets]
 CLegsSelection=1
 CLegsEnabled=false
@@ -963,17 +884,12 @@ Acc1Selection=0
 Acc1Enabled=false
 [SCOptionAnims]
 AnimCombat=1
-AnimLoot=true
+AnimLoot=1
 AnimOil=1
 AnimDrink=1
 AnimEat=1
 [Save]
 ShowCompatWarning=false
-[IDD_Arc]
-LodMult=5
-DrawMult=5
-OverrideDraw=false
-OverrideLod=false
 [LFEsb]
 LFEsbSell=0.5
 LFEsbBuy=1
@@ -990,50 +906,6 @@ BlockHits8=5
 BlockHits2=60
 BlockHits9=15
 BlockHits3=5
-[monsterList]
-Endrega=1
-NightWraiths=1
-Centipede=false
-Wight=false
-Cyclops=0
-Forktails=1
-Wolves=1
-Sharley=false
-Echinops=false
-Wyverns=1
-Leshens=false
-Hags=1
-Cockatrice=false
-Panther=false
-Spiders=1
-Wraiths=1
-Fogling=1
-Rotfiends=1
-Fiends=0
-Ghouls=1
-Barghest=false
-Drowners=1
-Bears=1
-Garkain=false
-Fleder=false
-Harpies=true
-Arachas=false
-HigherVamp=0
-Elementals=0
-Troll=0
-Boars=1
-Nekkers=1
-Vampires=false
-NoonWraiths=false
-Alghouls=1
-Gryphons=false
-Giant=0
-Kikimore=false
-Skeleton=false
-DrownerDLC=false
-Bruxa=false
-Golems=0
-Werewolves=false
 [ThoughtfulRoach]
 ParkingOption=2
 ToggleFollow=true
@@ -1077,17 +949,8 @@ scaleBoss=0.8
 tempYBoss=388
 tempXBoss=200
 tempXComp=33
-[W3IMTime]
-iSecondsPerMinute=30
-bMilitaryTime=true
 [W3IM_UI]
 bToggleHealthbarOff=true
-[encounterChanceDay]
-enableGroupMonsters=2
-enableWildHunt=0
-enableHumanEnemies=7
-enableFlyingMonsters=4
-enableGroundMonsters=2
 [Kinect]
 Kinect=false
 [AMMRoachHorse]
@@ -1112,9 +975,7 @@ fhudResetNewItemsRoach=true
 fhudResetNewItemsIngredients=true
 fhudShowItemCountWhenCrafting=true
 fhudResetNewItemsOthers=true
-fhudDefaultInventoryTab=1
 fhudResetNewItemsEquipment=false
-fhudEnableResetNewItems=true
 [AMMRoachSaddle]
 SaddleSelection=4
 BlindersEnabled=false
