--- a/settings/user.settings
+++ b/settings/user.settings
@@ -59,7 +59,7 @@ CrossbowEnabled=true
 FullBodyEnabled=false
 CapeEnabled=false
 StswEnabled=true
-WorldMapPreviewMode=1
+WorldMapPreviewMode=2
 BodyEnabled=false
 Accessories10GearEnabled=false
 Accessories7GearEnabled=false
@@ -180,6 +180,7 @@ BlockHits3=10
 [Budget]
 TerrainTileMipDataBudget=100
 TerrainTileMinTimeout=2
+DecalBudget=300
 TerrainTileTimeout=10
 OcclusionQueryAdditionalMemory=5
 TerrainTileLoadingTimeout=5
@@ -240,14 +241,14 @@ InjPImm=false
 [ImmersiveCamPositionsSprint]
 sprintMode=1
 [SCOptionVisuals]
-SignIgniInt=false
-BloodSprayMaj=false
-BloodOnlyCrit=false
-BloodSpray=true
-BloodActiveRange=true
-BloodTrail=false
-BloodActive=true
-SignAardInt=false
+SignIgniInt=0
+BloodSprayMaj=0
+BloodOnlyCrit=0
+BloodSpray=1
+BloodActiveRange=1
+BloodTrail=0
+BloodActive=1
+SignAardInt=0
 [SCOptionD]
 SpecterDam=1
 PDamB=1
@@ -378,7 +379,7 @@ DlcEnabled_dlc_007_001=1
 DlcEnabled_dlc_013_001=1
 DlcEnabled_dlc_dlcgrass=1
 DlcEnabled_dlc_001_001=1
-DlcEnabled_dlc_008_001=0
+DlcEnabled_dlc_008_001=1
 DlcEnabled_dlc_002_001=1
 DlcEnabled_dlc_animation_bottles=1
 DlcEnabled_ep1=1
@@ -416,13 +417,13 @@ ETFacingWeight=0
 ETSignsTowardsCamera=true
 ETCameraWeight=0.5
 [CAanimspeed]
-CAdblootstartsp=1.0
+CAdblootstartsp=1
 CAdrinksp=1.0
-CAlootstartsp=1.0
-CAworkbenchsp=1.0
+CAlootstartsp=1
+CAworkbenchsp=1.25
 CAgrindstonesp=1.0
 CAeatsp=1.0
-CAoilsp=1.0
+CAoilsp=1.5
 [SCOptionEx]
 SStamUsage=0
 SStamIndoor=false
@@ -575,6 +576,7 @@ CascadeShadowFadeTreshold=1
 HairWorksGlobalWidthLimit=2.25
 CascadeShadowDistanceScale2=2.5
 MaxTextureAnizotropy=0
+DynamicDecalsChunkLimit=300
 HairWorksGlobalStrandSmoothness=2
 HairWorksGlobalDensityQuality=0.75
 TextureMemoryBudget=2048
@@ -593,6 +595,7 @@ MaxTerrainShadowAtlasCount=4
 TextureStreamingDistanceLimitSq=40000
 HairWorksGlobalDetailLODFactor=0.65
 TextureMipBias=-1
+DynamicDecalsLimit=300
 TextureInFlightBudget=128
 TextureInFlightCountBudget=12
 PreserveSystemGamma=false
@@ -712,7 +715,7 @@ WhDM=0.8
 WhSU=0.4
 [CAsettings]
 CAanimcombat=true
-CAoilcombat=false
+CAoilcombat=true
 CAversion=2.300000
 CAinit=true
 CAautooil=true
