updated to version 3.30

--- a/settings/user.settings
+++ b/settings/user.settings
@@ -425,8 +425,8 @@ CAgrindstonesp=1.0
 CAeatsp=1.0
 CAoilsp=1.5
 [SCOptionEx]
-SStamUsage=0
-SStamIndoor=false
+SStamUsage=1
+SStamIndoor=true
 SStamDelExpl=3
 SStamWitSen=true
 SStamDelComb=2
@@ -791,7 +791,7 @@ fsOffset=0.95
 comOffset=0.3
 expOffset=0.7
 clueDepth=4
-expDepth=2.15
+expDepth=2.49
 intOffset=0.3
 noInteriorCamChange=true
 dismemberSlowMoFactor=0.2
